# CameraCalibrator

./: CMakeLists.txt
cmake/Modules/: FindVideoInput.cmake
src/: CMakeLists.txt  main.cpp  oldRealSenseCalibratorFromStudentProject.txt  tinyxml2.cpp
